everything solved prob :vertival align

--- a/style.css
+++ b/style.css
@@ -1,93 +1,92 @@
-*{  margin: 0;
-    padding: 0;
-   
-    
-padding: 0;
-}
-body{
-    background-color: hsl(30, 38%, 92%);
-    font-size: 38px;
-font-family:Montserrat ;
-align-items: center;
-height: 100vh;
-}
-    .box{
-        align-content: centers;
+<style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
+      body {
+        background-color: hsl(30, 38%, 92%);
+        justify-content: center;
+
+        display: flex;
+
+        justify-content: center;
+      }
+
+      .box {
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        align-items: center;
+        margin-top: 80px;
+        margin-right: 10px;
         background-color: white;
-        width: max-content;
-        margin-left: 20px;
-        padding: 2px;
-        border-radius: 20px;
-        
-        
-        
-        
-    }
-    img{
-        height: ;
-    }
-    .text{
-        padding-left: 4rem;
-        padding-right: 2.6rem;
-        
-    }
-    .perfume{
-margin-bottom: 1.7rem; 
-margin-top: 2rem; 
-font-family: Montserrat;  
-color: grey;    
-font-weight: 500;
-   
-    }
-    .head{
-        width: 11ch;
-        margin-bottom: 20px;
-        font-family: Fraunces;
-    }
-    .bodytext{
-        width:24ch;
-        margin-bottom: 3rem;
-        color: grey;
-        font-weight: 500;
-        
-    }
-    .pricenow{
-        font-size: 48px;
-        color: hsl(158, 36%, 37%);
-        font-weight: 800;
-    }
-    .pricecut{
-        font-size: 26px;
-        position: relative;
-        left: 199px;
-        text-decoration: line-through;
-    bottom: 5.7rem;
-    color: grey;
-    width: max-content;
-    }
-    .cart{
-        background-color: hsl(158, 36%, 37%);
-        width: max-content;
-        font-size: 38px;
-        font-weight: 600;
-        border-radius: 2rem;
-        padding-top: 1.8rem;
-    padding-right: 10rem;
-    padding-left: 10rem;
-        padding-bottom: 1.8rem;
-    position: relative;
+        border-radius: 1rem 1rem 1rem 1rem;
+        width: auto;
 
-    top: -39px;
-    font-family: Montserrat;
-color: white;
-}
-.imgsvg{
-    height: 36px;
-    position: relative;
-    right: 9px;
-    top: 6px;
-}
+        max-width: max-content;
+      }
+      .svg {
+        height: 23px;
+        padding-right: 8px;
+        position: relative;
+      }
+      img {
+        height: 440px;
+        border-radius: 1rem 0 0rem 1rem;
+      }
+      .text {
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 23px;
+      }
+      .perfume {
+        margin-bottom: 9px;
+        font-family: "Courier New", Courier, monospace;
+        font-weight: 600;
+        font-size: 20px;
+        color: grey;
+      }
+      .head {
+        width: 11ch;
+        margin-bottom: 10px;
+        font-family: roboto;
+        font-weight: 600;
+        color: rgb(10, 10, 10);
+      }
+
+      .bodytext {
+        background-color: white;
+        width: 24ch;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 500;
+        color: grey;
+        font-size: 20px;
+      }
+      .prices {
+        margin-top: 18px;
+        display: flex;
+        flex-direction: row;
+        column-gap: 2rem;
+      }
+      .pricenow {
+        color: hsl(158, 36%, 37%);
+        font-weight: 900;
+        font-size: 36px;
+      }
+      .pricecut {
+        font-size: 15px;
+        text-decoration: line-through;
+        font-weight: 600;
+        color: gray;
+        position: relative;
+        top: 15px;
+      }
+      .cart {
+        margin-top: 15px;
+        font-size: 20px;
+        background-color: hsl(158, 36%, 37%);
+        color: white;
+        display: flex;
+        border-radius: 10px;
+        padding: 14px 8px 15px 8px;
+        justify-content: center;
+      }
+    </style>
